alignment issue fixed

--- a/src/components/Blob.module.css
+++ b/src/components/Blob.module.css
@@ -3,8 +3,6 @@
 .background {
   background-color: transparent;
   position: relative;
-  width: 45vw;
-  height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
